# Glimpse

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  ROADMAP.md  build.bat  build_and_run.bat  cli.bat  configure.bat  configureAndBuild.sh  generate.bat  gui.bat  test.bat
.github/workflows/: cmake-single-platform.yml  cpp-tests.yml
ext/: ext.7z
src/: aarect.h  bvh_node.h  constant_medium.h  main.cpp  perlin.h  ray.h  sphere.h
src/cli/: main.cpp
src/core/: aabb.cpp  aabb.h  aarect.cpp  aarect.h  box.h  bvh_node.h  camera.h  cli.h  color.h  common.h  constant_medium.h  film.h  glimpse.cpp  glimpse.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  image.cpp  image.h  interval.cpp  interval.h  logger.h  material.h  moving_sphere.h  onb.h  pdf.h  perlin.h  ray.h  ray_analysis.cpp  ray_visualizer.cpp  ray_visualizer.h  render.cpp  render.h  rtw_stb_image.cpp  rtw_stb_image.h  scenes.cpp  scenes.h  sphere.h  texture.cpp  (+3 more)
src/core/hittables/: aarect.cpp  aarect.h  box.cpp  box.h  bvh_node.cpp  bvh_node.h  constant_medium.cpp  constant_medium.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  moving_sphere.cpp  moving_sphere.h  quad.h  sphere.cpp  sphere.h
src/gui/: GLWindow.h  app.cpp  app.h  config.h  gl_res.cpp  gl_res.h  plots.h  ray_debug.h  raytracer.h  ui.cpp  ui.h
tests/: Vec3.cpp  aabb_test.cpp  bvh_node_test.cpp  camera_test.cpp  main.cpp  onb_test.cpp  pdf_test.cpp  ray_test.cpp  render_test.cpp  sphere_test.cpp  test_cfg.h  test_vec3.cpp  testing.cpp  testing_main.cpp  vec3_test.cpp
tests/e2e/: e2e_test.cpp  print_ascii_image.h  test_scenes.h
tests/unit_tests/: aabb_test.cpp  bvh_node_test.cpp  camera_test.cpp  color_test.cpp  film_test.cpp  image_test.cpp  interval_test.cpp  onb_test.cpp  pdf_test.cpp  perlin_test.cpp  random_test.cpp  ray_test.cpp  render_test.cpp  sphere_test.cpp  texture_test.cpp  vec3_test.cpp
